<resources>
    <string name="simple_app_name">SimpleRichText</string>
    <string name="simple_pleat_input">　　请输入</string>
    <string name="simple_publish">发布</string>
    <string name="simple_no_title">无标题章节</string>
    <string name="simple_input_title">请输入章节名</string>
    <string name="simple_public_ty">公共</string>
    <string name="simple_count_0">0字</string>
    <string name="simple_count">字</string>
    <string name="simple_comma">，</string>
    <string name="simple_fullSpot">。</string>
    <string name="simple_colon">"："</string>
    <string name="simple_quotation">\"\"</string>
    <string name="simple_confirm">确定</string>
    <string name="simple_cancel">取消</string>
    <string name="simple_dustin_title">要将该章节移至回收站吗？</string>
    <string name="simple_dustin_meassage">回收站内的章节可以在30天内恢复，超过30天将被永久删除</string>
    <string name="simple_write">写作</string>
    <string name="simple_my_work">我的发起</string>
    <string name="simple_add">添加</string>
    <string name="simple_see_novel_published">查看作品(已发布)</string>
    <string name="simple_see_novel_no_publish">查看作品(未发布)</string>
    <string name="simple_close">关闭</string>
    <string name="simple_work_name">作品名称</string>
    <string name="simple_work_brief">作品简介</string>
    <string name="simple_work_type">作品类型</string>
    <string name="simple_publish_time">发布时间</string>
    <string name="simple_join_number">参与人数</string>
    <string name="simple_write_number">续写数量</string>
    <string name="simple_lookthrough_count">浏览次数</string>
    <string name="simple_get_good">获赞数</string>
    <string name="simple_fill_in_information">填写作品信息</string>
    <string name="simple_finish">完成</string>
    <string name="simple_book_name">作品名称：</string>
    <string name="simple_book_brief">作品简介</string>
    <string name="simple_book_type">作品类型</string>
    <string name="simple_book_public">指定观看人群</string>
    <string name="simple_book_writer">指定续写人员</string>
    <string name="simple_book_write_type">作品续写类型</string>
    <string name="simple_book_start">作品开头</string>
    <string name="simple_please_fill">请填写</string>
    <string name="simple_please_select">请选择</string>
    <string name="simple_max_book_name">15字以内汉字</string>
    <string name="simple_publish_type">发起类型</string>
    <string name="simple_draft_box">草稿箱</string>
    <string name="simple_published_capture">已发布章节</string>
    <string name="simple_recycle_bin">回收站</string>
    <string name="simple_none_data">暂无数据</string>
    <string name="simple_back">是否放弃编辑？</string>
    <string name="simple_back_message">退出后将无法保存内容哦~</string>
    <string name="simple_permission_deined">您拒绝了该请求，请允许</string>
    <string name="simple_save">保存</string>
    <string name="simple_fantasySentiment">玄幻言情</string>
    <string name="simple_ImmortalChivalry">仙侠奇缘</string>
    <string name="simple_AncientSentiment">古代言情"</string>
    <string name="simple_ModernSentiment">现代言情</string>
    <string name="simple_RomanticYouth">浪漫青春</string>
    <string name="simple_SuspensePsychic">悬疑灵异</string>
    <string name="simple_ScienceSpace">科幻空间</string>
    <string name="simple_GameCompetition">游戏竞技</string>
    <string name="simple_TanbiNovel">耽美小说</string>
    <string name="simple_fill_type">作品类型不能为空</string>
    <string name="simple_fill_name">作品名称不能为空</string>
    <string name="simple_fill_brief">作品简介不能为空</string>
    <string name="simple_upload_failed">上传失败</string>
    <string name="simple_capture_brief">章节简介</string>
    <string name="simple_name_empty">作品名称不能为空</string>
    <string name="simple_no_network">网络不可用</string>
    <string name="simple_update_failed">更新失败</string>
    <string name="simple_getdata_failed">获取数据失败</string>
    <string name="simple_brief_limit">章节介绍不能少于10个字</string>
    <string name="simple_title_limit">章节名称不能为空且少于15字</string>
    <string name="simple_capture_limit">内容不能为空且不少于200字</string>
    <string name="simple_published">已发布</string>
    <string name="simple_no_published">未发布</string>
    <string name="simple_cannot_delete">该章节不放入回收站</string>
    <string name="simple_not_edit">编辑作品(未发布)</string>
    <string name="simple_save_scueese">保存成功</string>
    <string name="simple_save_fail">保存失败</string>
    <string name="simple_publish_scueese">发布成功</string>
    <string name="simple_publish_failed">发布失败</string>


</resources>
