<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/simple_white"
   >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:paddingTop="24dp"
        android:background="@color/simple_main_color"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/iv_back"
            android:src="@mipmap/simple_ic_back_dark"
            android:scaleType="center"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/simple_white"
            android:text="@string/simple_fill_in_information"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_finish"
            android:textSize="16sp"
            android:textColor="@color/simple_white"
            android:text="@string/simple_finish"
            android:layout_gravity="center"
            android:layout_marginRight="16dp"
            />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingTop="10dp"
        >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="80dp"
            android:id="@+id/iv_book_bg"
            android:src="@color/simple_gray"
            android:layout_marginLeft="16dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@id/iv_book_bg"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_bookname"
                android:textSize="14sp"
                android:textColor="@color/simple_text_color"
                android:text="@string/simple_book_name"

                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_book_name"
                android:maxLines="1"
                android:layout_marginTop="6dp"
                android:padding="4dp"
                android:hint="@string/simple_max_book_name"
                android:textSize="14sp"
                android:textColor="@color/simple_text_color"
                android:lines="1"
                android:background="@drawable/simple_bg_editext"

                />
        </LinearLayout>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/simple_white_100"
        />
    

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/simple_cilick_publish_story_item"
        android:id="@+id/relat_publish_type"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple_publish_type"
            android:textSize="14sp"
            android:textColor="@color/simple_text_color"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/simple_second_text_color"
            android:text="@string/simple_please_select"
            android:drawableEnd="@mipmap/simple_ic_more"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:drawablePadding="4dp"
            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/simple_divide_color"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/simple_cilick_publish_story_item"
        android:id="@+id/relat_book_type"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple_book_type"
            android:textSize="14sp"
            android:textColor="@color/simple_text_color"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/simple_second_text_color"
            android:text="@string/simple_please_select"
            android:drawableEnd="@mipmap/simple_ic_more"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:drawablePadding="4dp"
            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/simple_divide_color"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/simple_cilick_publish_story_item"
        android:id="@+id/relat_book_writer"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple_book_writer"
            android:textSize="14sp"
            android:textColor="@color/simple_text_color"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/simple_second_text_color"
            android:text="@string/simple_please_select"
            android:drawableEnd="@mipmap/simple_ic_more"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:drawablePadding="4dp"
            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/simple_divide_color"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/simple_cilick_publish_story_item"
        android:id="@+id/relat_book_public"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple_book_public"
            android:textSize="14sp"
            android:textColor="@color/simple_text_color"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/simple_second_text_color"
            android:text="@string/simple_please_select"
            android:drawableEnd="@mipmap/simple_ic_more"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:drawablePadding="4dp"
            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/simple_divide_color"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

</LinearLayout>
