<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/simple_white"
    tools:context=".Main.Activities.MyPublishActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:paddingTop="24dp"
        android:orientation="horizontal"
        android:background="@color/simple_main_color"
        >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/iv_back"
            android:src="@mipmap/simple_ic_back_dark"
            android:scaleType="center"
            />

        <android.support.design.widget.TabLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/simple_main_color"
            android:id="@+id/tab_layout"
            app:tabIndicatorColor="@color/simple_white"
            app:tabSelectedTextColor="@color/simple_white"
            app:tabTextColor="@color/simple_white_50"
            app:tabGravity="center"
            app:tabMode="fixed"
            >
            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tab_published"
                android:text="@string/simple_published"
                />


            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tab_no_published"
                android:text="@string/simple_no_published"

                />
        </android.support.design.widget.TabLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tv_add"
            android:textSize="16sp"
            android:textColor="@color/simple_white"
            android:text="@string/simple_add"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:layout_marginRight="16dp"
            />

    </LinearLayout>


    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/viewpager"
        android:background="@color/simple_color_f2f2f2f2"
        >


    </android.support.v4.view.ViewPager>

</LinearLayout>