<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main.Activities.NovelCaptureActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:paddingTop="24dp"
        android:background="@color/simple_main_color"
        >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/iv_back"
            android:src="@mipmap/simple_ic_back_dark"
            android:scaleType="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tv_novel_name"
            android:textSize="16sp"
            android:textColor="@color/simple_white"
            android:layout_marginLeft="50dp"
            android:text="韶华灼灼"
            android:gravity="center"
            />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/iv_add"
            android:src="@mipmap/simple_ic_add_white"
            android:layout_gravity="end"
            android:scaleType="center"
            />

    </FrameLayout>


    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tab_layout"
        android:background="@color/simple_main_color"
        app:tabIndicatorColor="@color/simple_white"
        app:tabSelectedTextColor="@color/simple_white"
        app:tabTextColor="@color/simple_white_50"
        app:tabMode="fixed"
        >

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tab_draft_box"
            android:text="@string/simple_draft_box"
            />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tab_published_capture"
            android:text="@string/simple_published_capture"
            />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tab_recycle_bin"
            android:text="@string/simple_recycle_bin"
            />



    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/viewpager"
        >


    </android.support.v4.view.ViewPager>


</LinearLayout>