<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/card_back"
    app:cardBackgroundColor="@color/simple_white"
    app:cardCornerRadius="20dp"
    android:visibility="gone"
    app:cardElevation="0dp"

    >


    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:layout_marginTop="50dp"
    android:scrollbars="none"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <ImageView
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:id="@+id/iv_novel_cover_back"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:src="@mipmap/simple_novel_bg"
            android:scaleType="centerCrop"
            />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/simple_text_color"
                android:text="@string/simple_work_name"
                android:layout_marginRight="6dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_novel_name_back"
                android:textSize="16sp"
                android:textColor="@color/simple_second_text_color"
                android:layout_gravity="end"
                android:text="韶华灼灼"
                />

        </FrameLayout>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/simple_divide_color"
            android:layout_marginLeft="16dp"
            />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/simple_text_color"
                android:text="@string/simple_work_brief"
                android:layout_marginRight="6dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_novel_brief"
                android:textSize="16sp"
                android:textColor="@color/simple_second_text_color"
                android:layout_gravity="end"
                android:text="简介简介！！！"
                />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/simple_divide_color"
            android:layout_marginLeft="16dp"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/simple_text_color"
                android:text="@string/simple_work_type"
                android:layout_marginRight="6dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_novel_type"
                android:textSize="16sp"
                android:textColor="@color/simple_second_text_color"
                android:layout_gravity="end"
                android:text="古代言情"
                />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/simple_divide_color"
            android:layout_marginLeft="16dp"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/simple_text_color"
                android:text="@string/simple_publish_time"
                android:layout_marginRight="6dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_publish_time"
                android:textSize="16sp"
                android:textColor="@color/simple_second_text_color"
                android:layout_gravity="end"
                android:text="2018-08-18"
                />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@color/simple_white_200"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/simple_text_color"
                android:text="@string/simple_join_number"
                android:layout_marginRight="6dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_join_number"
                android:textSize="16sp"
                android:textColor="@color/simple_second_text_color"
                android:layout_gravity="end"
                android:text="2"
                />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/simple_divide_color"
            android:layout_marginLeft="16dp"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/simple_text_color"
                android:text="@string/simple_write_number"
                android:layout_marginRight="6dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_write_number"
                android:textSize="16sp"
                android:textColor="@color/simple_second_text_color"
                android:layout_gravity="end"
                android:text="3"
                />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/simple_divide_color"
            android:layout_marginLeft="16dp"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/simple_text_color"
                android:text="@string/simple_lookthrough_count"
                android:layout_marginRight="6dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_lookthrough_number"
                android:textSize="16sp"
                android:textColor="@color/simple_second_text_color"
                android:layout_gravity="end"
                android:text="10"
                />

        </FrameLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@color/simple_white_200"
            />


        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/simple_white_50"
            />

    </LinearLayout>

</ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="14sp"
        android:id="@+id/tv_close"
        android:textColor="@color/simple_text_color"
        android:text="@string/simple_close"
        android:gravity="center|start"
        android:paddingLeft="10dp"
        android:background="@color/simple_white_50"
        />


</android.support.v7.widget.CardView>